# AgentMind

./: .gitignore  CHANGELOG.md  CODE_REFACTORING_GUIDE.md  DATABASE_GUIDE.md  ENV_CONFIG_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  STRUCTURE_OPTIMIZATION.md  USER_GUIDE.md  deploy.bat  deploy.sh  docker-compose.dev.yml  docker-compose.yml  env.template  package-lock.json  package.json  test_stream_fix.py  前端重构方案.md
backend/: BACKEND_API_MIGRATION.md  Dockerfile  INTEGRATION_TESTING.md  LANGCHAIN_DOCS.md  SEARCH_PROVIDER_CONFIG.md  UV_USAGE.md  create_knowledge_cards.py  pyproject.toml  requirements.txt  run-backend.bat  run-backend.sh  test_agent_search.py  test_calculator.py  test_stream_format.py  test_tool_stream.py  test_web_search.py
backend/app/: __init__.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: __init__.py  chat.py  conversation_config.py  knowledge.py  planning.py  roles.py  tasks.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/demo/: langchain_demo.py
backend/app/llm/: __init__.py
backend/app/llm/config/: README.md  __init__.py  models.json
backend/app/services/: __init__.py  agent_service.py  knowledge_service.py  llm_factory.py  message_formatter.py  planning_agent_service.py  planning_tools.py
backend/app/services/agent/: __init__.py  (+3 more)
backend/scripts/: README.md  init_database.sql
backend/scripts/migrations/: 002_add_role_and_config_tables.sql
backend/tests/integration/: test_message_types.py  test_plan_mode.py
(+119 files in other folders)
